commit of the day

--- a/assets/layout.css
+++ b/assets/layout.css
@@ -166,8 +166,8 @@ body {
   
   /* Targets the paragraphs with class name of text */
   .text {
-    color: black;
-    font-size: 19px;
+    color: rgb(59, 52, 52);
+    font-size: 16px;
     width: 100%;
     padding: 10px;
     margin: 0, 20px;
@@ -192,3 +192,71 @@ body {
     text-align: center;
     width: 800px;
   }
+  /* Add padding around the footer as well */
+
+footer {
+    background-color: whitesmoke;
+    padding: 20px 10px;
+  }
+  
+  /* Sets all link texts to white and puts margin to the left and right */
+  
+  footer a {
+    color: white;
+    margin: 0 10px;
+  }
+
+  /* Tablets and Under */
+
+@media(max-width: 768px) {
+    .grid,
+    .grid-3 {
+      grid-template-columns: 1fr;
+    }
+
+    /* Align all text to the center. This will move all text, including form centrally */
+
+.showcase {
+    height: auto;
+    text-align: center;
+  }
+
+/* This resets the width of the image container and adds margin space to the left */ 
+
+.image {
+    width: 600px;
+    margin-left: 80px;
+  }
+
+/* Changes the service sections from side-by-side orientation to each taking its own line. Aligns text to the center */
+
+.stats .flex {
+    flex-direction: column;
+  }
+
+  .stats {
+    text-align: center;
+  }
+
+/* Makes sure each stat section does not exceed the width of parent */
+
+.stat {
+    width: 100%;
+    padding-right: 80px;
+  }
+
+/* (re)Moves the cirle to the center of the card */
+
+.circle {
+      background-color: transparent;
+      border:3px solid purple;
+      height:90px;
+      position: relative;
+      top: -30px;
+      left: 270px;
+      border-radius:50%;
+      -moz-border-radius:50%;
+      -webkit-border-radius:50%;
+      width:90px;
+  }
+}
