--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,3 +288,15 @@ nav {
     text-align: center;
     margin: 2rem 0 0;
   }
+
+  .scroll-up {
+    position: fixed;
+    right: 0.5%;
+    bottom: 3%;
+    cursor: pointer;
+  }
+  
+  .up-arrow {
+    width: 3rem;
+    height: 3rem;
+  }
